--- a/Python Code/note&comment.ipynb
+++ b/Python Code/note&comment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "import os\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "for name in sub_folder:\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -100,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
       "text/plain": "'\\nfrom sklearn.model_selection import train_test_split\\ndocs_train, docs_val, y_train, y_val = train_test_split(train_set.data, train_set.target, test_size=0.25, random_state=None)\\n'"
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -154,13 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
       "text/plain": "MultinomialNB()"
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,17 +180,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
       "text/plain": "'from sklearn.metrics import classification_report\\ntrain_score = clf.score(X, train_set.target)\\nprint(\"train score: {0}\".format(train_score))\\npred = clf.predict(X_val)\\nprint(\"classification report on test set for classifier:\")\\nprint(clf)\\nprint(classification_report(y_val, pred, target_names=[\\'neg\\',\\'pos\\']))'"
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "path = []\n",
+    "for p in train_set.filenames:\n",
+    "    path.append(os.path.split(p)[1].split('_')[0])\n",
+    "train_proba = clf.predict_proba(train_set.data)\n",
+    "pd.DataFrame(train_proba,index=path,columns=train_set.target_names).to_csv('result/n&c_embedding.csv', float_format='%.16f')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# 步骤7：评估算法的预测效果\n",
     "\"\"\"from sklearn.metrics import classification_report\n",
@@ -210,13 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
       "text/plain": "'\\nfrom sklearn.metrics import confusion_matrix\\ncm = confusion_matrix(y_val, pred)\\nprint(\"confusion matrix:\")\\nprint(cm)\\n'"
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -262,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
@@ -286,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "# 步骤7：评估算法的预测效果\n",
@@ -302,13 +320,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "path = []\n",
     "for p in test_set.filenames:\n",
     "    path.append(os.path.split(p)[1].split('_')[0])\n",
-    "pd.DataFrame(pred_proba,index=path,columns=train_set.target_names).to_csv('n&c_result.csv')"
+    "pd.DataFrame(pred_proba,index=path,columns=train_set.target_names).to_csv('result/n&c_result.csv', float_format='%.16f')"
    ],
    "metadata": {
     "collapsed": false,
