--- a/Python Code/sum.ipynb
+++ b/Python Code/sum.ipynb
@@ -2,14 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    ""
+    "import pandas as pd\n",
+    "\n",
+    "tl = pd.read_csv('t&l_result.csv',index_col=0)\n",
+    "nc = pd.read_csv('n&c_result.csv',index_col=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "tlno0 = tl[tl['pos']>0.00675]\n",
+    "ncno0 = nc[nc['pos']>0.001]\n",
+    "\n",
+    "final = []\n",
+    "\n",
+    "for i in tlno0.index:\n",
+    "    if i in ncno0.index:\n",
+    "        final.append(i)\n",
+    "\n",
+    "WORKSPACE = '/Users/houtonglei/OneDrive - stu.hqu.edu.cn/数学建模/2021美赛/'\n",
+    "DATASET_DESCRIPTION = WORKSPACE + '2021_ICM_ProblemC/2021MCM_ProblemC_DataSet.xlsx'\n",
+    "dataset_description = pd.read_excel(DATASET_DESCRIPTION)\n",
+    "\n",
+    "output=[]\n",
+    "for i in final:\n",
+    "    output.append(dataset_description[dataset_description['GlobalID']==i])\n",
+    "\n",
+    "pd.concat(output).to_excel('output.xlsx')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
