--- a/Python Code/note&comment.ipynb
+++ b/Python Code/note&comment.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "WORKSPACE = '/Users/houtonglei/OneDrive - stu.hqu.edu.cn/数学建模/2021美赛/'\n",
     "DATASET_PATH = WORKSPACE + '2021_ICM_ProblemC/txt_data'\n",
     "DATASET_DESCRIPTION = WORKSPACE + '2021_ICM_ProblemC/2021MCM_ProblemC_DataSet.xlsx'\n",
@@ -19,11 +20,9 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [],
+   "cell_type": "raw",
    "source": [
-    "import os\n",
+    "\n",
     "sub_folder = ['/pos/','/neg/','/unv/','/unp/']\n",
     "for _, text in dataset_description.iterrows():\n",
     "    if text['Lab Status']=='Positive ID':\n",
@@ -45,36 +44,35 @@
     "        with open(DATASET_PATH+'/unp/'+text['GlobalID']+'_Notes.txt','w') as f:    #设置文件对象\n",
     "            f.write(str(text['Notes']))\n",
     "        with open(DATASET_PATH+'/unp/'+text['GlobalID']+'_LabComments.txt','w') as f:    #设置文件对象\n",
-    "            f.write(str(text['Lab Comments']))"
+    "            f.write(str(text['Lab Comments']))\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% raw\n"
     }
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
+   "cell_type": "raw",
    "source": [
+    "\n",
     "for name in sub_folder:\n",
     "    files = os.listdir(DATASET_PATH+name)  # 获取路径下的子文件(夹)列表\n",
     "    for file in files:\n",
     "        if os.path.getsize(DATASET_PATH+name+file) == 0:  # 文件大小为0\n",
-    "            os.remove(DATASET_PATH+name+file)  # 删除这个文件"
+    "            os.remove(DATASET_PATH+name+file)  # 删除这个文件\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% raw\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -99,34 +97,22 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'\\nfrom sklearn.model_selection import train_test_split\\ndocs_train, docs_val, y_train, y_val = train_test_split(train_set.data, train_set.target, test_size=0.25, random_state=None)\\n'"
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "raw",
    "source": [
-    "\"\"\"\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "docs_train, docs_val, y_train, y_val = train_test_split(train_set.data, train_set.target, test_size=0.25, random_state=None)\n",
-    "\"\"\""
+    "docs_train, docs_val, y_train, y_val = train_test_split(train_set.data, train_set.target, test_size=0.25, random_state=None)\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% raw\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -138,7 +124,7 @@
     }
    ],
    "source": [
-    "# 步骤2：将文档数据转化为TF-IDF向量\n",
+    "# 步骤2：将文档数据转化为a\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "vectorizer = TfidfVectorizer()\n",
     "X = vectorizer.fit_transform(train_set.data)\n",
@@ -154,13 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
       "text/plain": "MultinomialNB()"
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,23 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'from sklearn.metrics import classification_report\\ntrain_score = clf.score(X, train_set.target)\\nprint(\"train score: {0}\".format(train_score))\\npred = clf.predict(X_val)\\nprint(\"classification report on test set for classifier:\")\\nprint(clf)\\nprint(classification_report(y_val, pred, target_names=[\\'neg\\',\\'pos\\']))'"
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 24,
+   "outputs": [],
    "source": [
+    "train_proba = clf.predict_proba(X)\n",
     "path = []\n",
     "for p in train_set.filenames:\n",
     "    path.append(os.path.split(p)[1].split('_')[0])\n",
-    "train_proba = clf.predict_proba(train_set.data)\n",
-    "pd.DataFrame(train_proba,index=path,columns=train_set.target_names).to_csv('result/n&c_embedding.csv', float_format='%.16f')"
+    "pd.DataFrame(train_proba,index=path,columns=train_set.target_names).to_csv('result/n&c_embedding.csv', float_format='%.16f')\n",
+    "\n",
+    "sum_file = pd.read_csv('result/sum_train.csv', index_col=0)\n",
+    "for i,p in enumerate(path):\n",
+    "    sum_file.loc[p,'nc_pos'] = train_proba[i, 1]\n",
+    "sum_file.to_csv('result/sum_train.csv', float_format='%.16f')"
    ],
    "metadata": {
     "collapsed": false,
@@ -207,57 +189,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "outputs": [],
    "source": [
+    "temp = sum_file.loc[p]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "raw",
+   "source": [
+    "\n",
     "# 步骤7：评估算法的预测效果\n",
-    "\"\"\"from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import classification_report\n",
     "train_score = clf.score(X, train_set.target)\n",
     "print(\"train score: {0}\".format(train_score))\n",
     "pred = clf.predict(X_val)\n",
     "print(\"classification report on test set for classifier:\")\n",
     "print(clf)\n",
-    "print(classification_report(y_val, pred, target_names=['neg','pos']))\"\"\""
+    "print(classification_report(y_val, pred, target_names=['neg','pos']))\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% raw\n"
     }
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'\\nfrom sklearn.metrics import confusion_matrix\\ncm = confusion_matrix(y_val, pred)\\nprint(\"confusion matrix:\")\\nprint(cm)\\n'"
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "raw",
    "source": [
+    "\n",
     "# 步骤8：生成混淆矩阵\n",
-    "\"\"\"\n",
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(y_val, pred)\n",
     "print(\"confusion matrix:\")\n",
-    "print(cm)\n",
-    "\"\"\""
+    "print(cm)\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% raw\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -280,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
@@ -304,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "# 步骤7：评估算法的预测效果\n",
@@ -320,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "path = []\n",
