--- a/Python Code/pic_dataset.ipynb
+++ b/Python Code/pic_dataset.ipynb
@@ -9,12 +9,25 @@
     }
    },
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "WORKSPACE = '/Users/houtonglei/OneDrive - stu.hqu.edu.cn/数学建模/2021美赛/'\n",
+    "DATASET_INDEX = WORKSPACE + '2021_ICM_ProblemC/2021MCM_ProblemC_Images_by_GlobalID.xlsx'\n",
+    "dataset_index = pd.read_excel(DATASET_INDEX)"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "import os\n",
     "import numpy as np\n",
     "from skimage import io,transform,color\n",
     "from tqdm import tqdm\n",
     "\n",
-    "WORKSPACE = '/Users/houtonglei/OneDrive - stu.hqu.edu.cn/数学建模/2021美赛/'\n",
     "DATASET_PATH = WORKSPACE + '2021_ICM_ProblemC/pic_dataset/'\n",
     "TRAIN_SET = DATASET_PATH + 'train/'\n",
     "labels = ['neg','pos']\n",
@@ -45,8 +58,12 @@
     "np.save('pic_data/pos_filename.npy',np.array(pos_filename))\n",
     "np.save('pic_data/neg_filename.npy',np.array(neg_filename))"
    ],
-   "execution_count": null,
-   "outputs": []
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
