--- a/Python Code/pic_train_SVM.ipynb
+++ b/Python Code/pic_train_SVM.ipynb
@@ -2,24 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "WORKSPACE = '/Users/houtonglei/OneDrive - stu.hqu.edu.cn/数学建模/2021美赛/'\n",
-    "DATASET_INDEX = WORKSPACE + '2021_ICM_ProblemC/2021MCM_ProblemC_Images_by_GlobalID.xlsx'\n",
-    "dataset_index = pd.read_excel(DATASET_INDEX)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import logging\n",
@@ -38,17 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import sklearn\n",
     "import numpy as np\n",
     "pos = np.load('pic_data/pos.npy')\n",
+    "pos_filename = np.load('pic_data/pos_filename.npy', allow_pickle=True)\n",
     "neg = np.load('pic_data/neg.npy')\n",
+    "neg_filename = np.load('pic_data/neg_filename.npy', allow_pickle=True)\n",
+    "\n",
     "train_set = sklearn.utils.Bunch()\n",
     "train_set.data = np.concatenate((pos,neg))\n",
     "train_set.target = np.array([1]*len(pos)+[0]*len(neg))\n",
-    "train_set.target_names = ['neg''pos']"
+    "train_set.target_names = ['neg', 'pos']\n",
+    "train_set.filename = np.concatenate((pos_filename,neg_filename))"
    ],
    "metadata": {
     "collapsed": false,
@@ -59,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -68,7 +55,7 @@
       "Total dataset size:\n",
       "n_samples: 3111\n",
       "n_features: 4096\n",
-      "n_classes: 1\n"
+      "n_classes: 2\n"
      ]
     }
    ],
@@ -105,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "test = np.load('pic_data/test.npy')\n",
@@ -123,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Extracting the top 150 eigenfaces from 3111 faces\n",
-      "done in 1.146s\n",
+      "done in 0.942s\n",
       "Projecting the input data on the eigenfaces orthonormal basis\n",
-      "done in 0.119s\n"
+      "done in 0.050s\n"
      ]
     }
    ],
@@ -165,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Fitting the classifier to the training set\n",
-      "done in 203.896s\n",
+      "done in 199.061s\n",
       "Best estimator found by grid search:\n",
       "SVC(C=1000.0, class_weight='balanced', gamma=0.005, probability=True)\n"
      ]
@@ -202,11 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "train_proba = clf.predict_proba(train_set.data)\n",
-    "pd.DataFrame(train_proba,index=train_set.filenames,columns=train_set.target_names).to_csv('result/svm_embedding.csv', float_format='%.16f')"
+    "import pandas as pd\n",
+    "train_proba = clf.predict_proba(X_train_pca)\n",
+    "pd.DataFrame(train_proba,index=train_set.filename,columns=train_set.target_names).to_csv('result/svm_embedding.csv', float_format='%.16f')\n",
+    "\n",
+    "sum_file = pd.read_csv('result/sum_train.csv', index_col=0)\n",
+    "for i,p in enumerate(train_set.filename):\n",
+    "    sum_file.loc[p,'svm_pos'] = train_proba[i, 1]\n",
+    "sum_file.to_csv('result/sum_train.csv', float_format='%.16f')"
    ],
    "metadata": {
     "collapsed": false,
@@ -242,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "pred_proba = clf.predict_proba(X_test_pca)\n",
