--- a/Python Code/time&location_train.ipynb
+++ b/Python Code/time&location_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "import sklearn\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
@@ -61,13 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "'from sklearn.model_selection import train_test_split\\nx_train, x_val, y_train, y_val = train_test_split(train_dataset.data, train_dataset.target, test_size=0.25)\\nx_train = std.fit_transform(x_train)\\ny_train = y_train.astype(np.int8)\\nx_val = std.transform(x_val)\\ny_val = y_val.astype(np.int8)'"
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "LogisticRegressionCV()"
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,13 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "'print(clf.score(x_val, y_val))\\nprint(clf.coef_)'"
      },
-     "execution_count": 74,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,11 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "train_proba = clf.predict_proba(train_dataset.data)\n",
-    "pd.DataFrame(train_proba,index=train_dataset.filenames.tolist(),columns=train_dataset.target_names).to_csv('result/t&l_embedding.csv', float_format='%.16f')"
+    "pd.DataFrame(train_proba,index=train_dataset.filenames.tolist(),columns=train_dataset.target_names).to_csv('result/t&l_embedding.csv', float_format='%.16f')\n",
+    "\n",
+    "sum_file = pd.read_csv('result/sum_train.csv', index_col=0)\n",
+    "for i,p in enumerate(train_dataset.filenames.tolist()):\n",
+    "    sum_file.loc[p,'tl_pos'] = train_proba[i, 1]\n",
+    "sum_file.to_csv('result/sum_train.csv', float_format='%.16f')"
    ],
    "metadata": {
     "collapsed": false,
@@ -153,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "test_set = dataset_description[dataset_description['Lab Status'].isin(['Unverified','Unprocessed'])]\n",
@@ -174,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "pred_proba = clf.predict_proba(test_dataset.data)\n",
